sepet ürün adı font weight

--- a/Components/Grid.scss
+++ b/Components/Grid.scss
@@ -430,7 +430,7 @@
 .ems-grid-cart {
     .ems-grid-row {
         .ems-grid-name {
-            font-family: $fB;
+            font-family: $fD;
             font-size: 14px;
             padding-left:10px;
             padding-right: 10px;
