--- a/style.scss
+++ b/style.scss
@@ -1,36 +1,36 @@
-@import 'Shared/Helpers/Vendor.scss';
-@import 'Base/Variables.scss';
-@import 'Shared/Static/Normalize.scss';
-@import 'Base/Typography.scss';
-@import 'Base/Sprite.scss';
-@import 'Shared/Static/Animate.scss';
-@import 'Shared/Static/Emos.FW.scss';
-@import 'Base/Shared.scss';
-@import 'Components/Buttons.scss';
-@import 'Components/Form.scss';
-@import 'Components/Section.scss';
-@import 'Components/Slider.scss';
-@import 'Components/Tab.scss';
-@import 'Components/Page-Select-Menu.scss';
-@import 'Layout/Header.scss';
-@import 'Layout/Footer.scss';
-@import 'Layout/Home.scss';
-@import 'Layout/Stores.scss';
-@import 'Modules/Search.scss';
-@import 'Modules/Member.scss';
-@import 'Modules/Cart.scss';
-@import 'Modules/Navigation.scss';
-@import 'Modules/Category.scss';
-@import 'Modules/Filter.scss';
-@import 'Modules/Compare.scss';
-@import 'Modules/Payment-Options.scss';
-@import 'Modules/Docs.scss';
-@import 'Layout/Content.scss';
-@import 'Layout/Product-List.scss';
-@import 'Layout/Product-Detail.scss';
-@import 'Layout/Service-List.scss';
-@import 'Modules/Popup.scss';
-@import 'Modules/Language.scss';
-@import 'Modules/Swiper-Slider.scss';
-@import 'Modules/Widget.scss';
-@import 'Components/Grid.scss';
+@import 'Shared/Helpers/Vendor';
+@import 'Base/Variables';
+@import 'Shared/Static/Normalize';
+@import 'Base/Typography';
+@import 'Base/Sprite';
+@import 'Shared/Static/Animate';
+@import 'Shared/Static/Emos.FW';
+@import 'Base/Shared';
+@import 'Components/Buttons';
+@import 'Components/Form';
+@import 'Components/Section';
+@import 'Components/Slider';
+@import 'Components/Tab'; 
+@import 'Components/Page-Select-Menu';
+@import 'Layout/Header';
+@import 'Layout/Footer';
+@import 'Layout/Home';
+@import 'Layout/Stores';
+@import 'Modules/Search';
+@import 'Modules/Member';
+@import 'Modules/Cart';
+@import 'Modules/Navigation';
+@import 'Modules/Category';
+@import 'Modules/Filter';
+@import 'Modules/Compare';
+@import 'Modules/Payment-Options';
+@import 'Modules/Docs';
+@import 'Layout/Content';
+@import 'Layout/Product-List';
+@import 'Layout/Product-Detail';
+@import 'Layout/Service-List';
+@import 'Modules/Popup';
+@import 'Modules/Language';
+@import 'Modules/Swiper-Slider';
+@import 'Modules/Widget'; 
+@import 'Components/Grid';  
