--- a/Layout/Product-List.scss
+++ b/Layout/Product-List.scss
@@ -135,10 +135,10 @@
             position: absolute;
             top: 0;
             left: 0;
-            background-image:-webkit-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0)); 
-            background-image:-moz-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0)); 
-            background-image:-ms-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0)); 
-            background-image:-o-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0)); 
+            background-image:-webkit-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+            background-image:-moz-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+            background-image:-ms-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
+            background-image:-o-linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
             background-image:linear-gradient(to bottom, rgba(0,0,0,.1), rgba(0,0,0,0));
             pointer-events: none;
         }
@@ -272,8 +272,8 @@
         text-align: left;
         .urunListe_sonXUrun {
             > span {
-                font-size:11px; 
-                font-family: $fD; 
+                font-size:11px;
+                font-family: $fD;
                 padding: 5px 0 5px 20px;
                 color: #000;
                 position: relative;
@@ -345,7 +345,7 @@
                     font-family:$fD;
                     text-align:center;
                     padding: 4px 8px;
-                    border-radius:4px; 
+                    border-radius:4px;
                 }
             }
             &.urunListe_yeniUrun{
@@ -393,6 +393,21 @@
         .mobile-filter, .ems-prd-list-count, .popup.popup-sort {display:none;}
     }
     .col-2 {
+      @media screen and (max-width:640px) {
+        .prdListTitle{
+          .page-title{
+            margin:15px 0px;
+            position: unset;
+          }
+        }
+      }
+      .prdListTitle{
+        .page-title{
+        position: absolute;
+        margin-top: 15px;
+        margin-left: 15px;
+      }
+    }
         width:auto;
         margin-left:180px;
         display:block;
@@ -469,7 +484,7 @@
                 }
             }
             .ems-prd-list-sort {
-                min-width:125px; 
+                min-width:125px;
                 float: right;
                 margin:10px 10px 15px 0;
                 select {
@@ -479,7 +494,7 @@
                     padding: 10px;
                     width: 100%;
                     border: 0;
-                    font-size:14px; 
+                    font-size:14px;
                     color:$text;
                     font-family: $fD;
                     background: none;
@@ -487,7 +502,7 @@
                     line-height: 20px;
                 }
                 .sStylerWrp {
-                    position:relative; 
+                    position:relative;
                     cursor:default;
                     background: none;
                     padding: 10px 25px 10px 10px;
@@ -495,7 +510,7 @@
                     height: 100%;
                     span.sStyler {
                         display:block;
-                        font-size:14px; 
+                        font-size:14px;
                         color:$colorDefault;
                     }
                 }
@@ -543,7 +558,7 @@
     &.search-page {
         .tableTitleArama{ display:none; }
         div[id$="urun_validatingForm"]{
-            border-bottom:1px solid $borderColor; 
+            border-bottom:1px solid $borderColor;
             padding-bottom:20px;
         }
         .pageArama{
@@ -633,7 +648,7 @@
             }
         }
     }
-    [id$="lbfURN_YENIURUNLERYUKLENIYOR"] {padding:10px; text-align:center; }    
+    [id$="lbfURN_YENIURUNLERYUKLENIYOR"] {padding:10px; text-align:center; }
 }
 
 .urunPaging {
@@ -646,7 +661,7 @@
     .urunPaging_pageNavigation {
         position: relative;
         width: 100%;
-        padding: 40px 0 20px 0; 
+        padding: 40px 0 20px 0;
         text-align: center;
         span[id$="lblPaging"] {
             display: inline-block;
@@ -775,7 +790,7 @@ body.dortlu .page-list{
         &-inner{
             margin:10px 5px;
             padding-bottom:10px;
-        } 
+        }
         &-alternate{
             width: 100%;
         }
@@ -838,7 +853,7 @@ nav.infinite-scroll-loadmore{
                     font-size:10px;
                     margin-left:20px;
                     position: relative;
-                    top: -1px; 
+                    top: -1px;
                     &:before{ color:#878787; font-size:10px; }
                 }
             }
@@ -854,7 +869,7 @@ nav.infinite-scroll-loadmore{
                     font-size:10px;
                     margin-left:20px;
                     position: relative;
-                    top: -1px; 
+                    top: -1px;
                     &:before{ color:#878787; font-size:10px; }
                 }
             }
@@ -869,22 +884,22 @@ nav.infinite-scroll-loadmore{
                     color: $colorDefault;
                     padding: 20px 0;
                     font-family: $fB;
-                    text-transform: uppercase; 
+                    text-transform: uppercase;
                     display: inline-block;
                     &[id$="lblFiltreler"] {display:none;}
-                    &[id$="lblKayitSayisi"] span {display:none;} 
+                    &[id$="lblKayitSayisi"] span {display:none;}
                 }
             }
         }
 
         .popup-sort {
-            position: fixed; 
-            bottom:-100%; 
+            position: fixed;
+            bottom:-100%;
             left: 0;
             @include transition(bottom .2s ease);
-            z-index:30; 
-            width:100%; 
-            height:100%; 
+            z-index:30;
+            width:100%;
+            height:100%;
             background-color: #fff;
             will-change: bottom;
             .popup-header {
@@ -970,6 +985,12 @@ nav.infinite-scroll-loadmore{
         }
     }
     .col-2 {
+          .prdListTitle{
+            .page-title{
+              margin:0px 15px;
+              position: unset;
+            }
+          }
         float: none;
         margin-left: 0;
         padding: 0;
@@ -1043,7 +1064,7 @@ nav.infinite-scroll-loadmore{
                 }
             }
         }
-    }   
+    }
 }
 
 @media screen and (max-width:640px) {
